# nec-v20-emu

./: .clang-format  CMakeLists.txt  README.md
src/: main.c
src/include/: common.h  cpu.h
